# deepleaning_ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebook/: 250309_PretrainingLLM.ipynb  OpenSourceModels_HuggingFace_object_detect.ipynb  OpenSourceModels_HuggingFace_text.ipynb
src/: 230413_Python_Tish2Downloader.py  240628_gen_mutants.py  240628_learn_async.py  240628_pdb-seq.py  KULLM.py  dotenv.py  finetune_tutorial.py  huggingface_test.py  linear_reg.py  llama_cpp_script.py  module_util.py  test_subgraph_rewriter.py  values.py  visualize.py
