[project]
name = "learn-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.26.1",
    "datasets==2.16.1",
    "fasttext>=0.9.3",
    "jupyter==1.0.0",
    "matplotlib>=3.10.1",
    "pandas==2.2.0",
    "pyarrow==15.0.0",
    "sentencepiece==0.1.99",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "torchvision==0.16.2",
    "tqdm==4.66.1",
    "transformers==4.37.2",
]
