[project]
name = "learn-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.26.1",
    "datasets==2.16.1",
    "fasttext>=0.9.3",
    "gradio>=5.20.1",
    "inflect>=7.5.0",
    "jupyter==1.0.0",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.1",
    "pandas==2.2.0",
    "phonemizer>=3.3.0",
    "pillow>=11.1.0",
    "py-espeak-ng>=0.1.8",
    "pyarrow==15.0.0",
    "sentence-transformers>=3.0.1",
    "sentencepiece==0.1.99",
    "soundfile>=0.13.1",
    "timm>=1.0.15",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "torchvision==0.16.2",
    "tqdm==4.66.1",
    "transformers==4.37.2",
]

[tool.ruff.lint]
ignore = ["E402", "E731", "F841"]
